# todo-app

./: .gitignore  .vercelignore  CLAUDE.md  GEMINI.md  QWEN.md  README.md  logs.1766948079496.json  package-lock.json  text.md  vercel.json
todo_app/phase_1/: pyproject.toml  reproduce_issue.py  ruff.toml
todo_app/phase_1/src/todo_app/: main.py
todo_app/phase_1/src/todo_app/commands/: base.py  invoker.py  task_commands.py
todo_app/phase_1/src/todo_app/domain/: __init__.py  audit.py  task.py
todo_app/phase_1/src/todo_app/repository/: __init__.py  base.py  in_memory.py
todo_app/phase_1/src/todo_app/service/: audit_service.py  dto.py  task_service.py
todo_app/phase_1/src/todo_app/ui/: cli.py  renderer.py
todo_app/phase_1/tests/unit/: test_audit.py  test_cli.py  test_commands.py  test_invoker.py  test_renderer.py  test_repository.py  test_service.py  test_short_id.py  test_task.py  test_update_interactive.py
todo_app/phase_2/backend/: .env.example  CLAUDE.md  Dockerfile  Procfile  migrate_us9.py  pyproject.toml  railway.toml  render.yaml  requirements.txt
todo_app/phase_2/backend/api/: index.py
todo_app/phase_2/backend/src/todo_app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
todo_app/phase_2/backend/src/todo_app/routes/: notifications.py  tasks.py
todo_app/phase_2/backend/src/todo_app/services/: email_service.py
todo_app/phase_2/backend/tests/: test_api_structure.py
todo_app/phase_2/backend/tests/unit/models/: __init__.py  test_conversation.py
todo_app/phase_3/backend/: .env.example  Procfile  README.md  create_test_user.py  list_users.py  nixpacks.toml  pyproject.toml  requirements.txt
todo_app/phase_3/backend/alembic/: env.py
todo_app/phase_3/backend/alembic/versions/: 2f396b4cc71c_add_conversation_and_message_tables.py
todo_app/phase_3/backend/src/: __init__.py  chatkit_server.py  chatkit_store.py  db.py  deps.py  main.py
todo_app/phase_3/backend/src/api/routes/: chat.py  notifications.py  tasks.py
todo_app/phase_3/backend/src/mcp_server/: __init__.py  schemas.py  server.py
todo_app/phase_3/backend/src/mcp_server/tools/: __init__.py  add_task.py  list_tasks.py  update_task.py
todo_app/phase_3/backend/src/models/: __init__.py  conversation.py  jwks.py  message.py  notification.py  tag.py  task.py  task_tag_link.py  user.py
todo_app/phase_3/backend/src/repositories/: conversation_repository.py  message_repository.py  task_repository.py
todo_app/phase_3/backend/src/services/: email_service.py
todo_app/phase_3/backend/src/services/prompts/: system_prompt.md
todo_app/phase_3/backend/tests/: __init__.py
todo_app/phase_3/backend/tests/unit/mcp/: test_add_task.py  test_list_tasks.py  test_update_task.py
todo_app/phase_3/backend/tests/unit/models/: test_conversation.py  test_message.py  test_tag.py
todo_app/phase_3/backend/tests/unit/repositories/: test_conversation_repository.py  test_task_repository.py
todo_app/phase_3/backend/tests/unit/services/: test_chat_service.py
todo_app/phase_5/backend/: .env.example  pyproject.toml
todo_app/phase_5/backend/alembic/versions/: add_phase5_task_fields.py  create_event_log_table.py  create_notifications_table.py  create_task_recurrences_table.py  create_task_reminders_table.py
todo_app/phase_5/backend/dapr/components/: reminder-cron.yaml
todo_app/phase_5/backend/src/: schemas.py
todo_app/phase_5/backend/src/api/routes/: dapr_bindings.py  tasks.py
todo_app/phase_5/backend/src/mcp_server/tools/: add_task.py  delete_task.py
todo_app/phase_5/backend/src/models/: __init__.py  enums.py  notification.py  task.py  task_recurrence.py  task_reminder.py
todo_app/phase_5/backend/src/repositories/: recurrence_repository.py  reminder_repository.py
todo_app/phase_5/backend/src/schemas/: event_schemas.py
todo_app/phase_5/backend/src/services/: dapr_secrets_service.py  dapr_state_service.py  kafka_service.py  recurrence_service.py  reminder_scheduler.py  reminder_service.py  task_service.py
todo_app/phase_5/backend/src/services/calculators/: recurrence_calculator.py
todo_app/phase_5/backend/src/services/prompts/: system_prompt.md
todo_app/phase_5/backend/tests/: __init__.py
todo_app/phase_5/backend/tests/contract/: test_reminders_api.py  test_task_recurrence_api.py
todo_app/phase_5/backend/tests/integration/: test_event_idempotency_integration.py  test_recurring_tasks.py  test_reminder_flow.py  test_task_completion_event_integration.py  test_task_creation_event_integration.py
todo_app/phase_5/backend/tests/unit/calculators/: test_recurrence_calculator.py
todo_app/phase_5/backend/tests/unit/models/: __init__.py
todo_app/phase_5/backend/tests/unit/repositories/: test_conversation_repository.py
todo_app/phase_5/backend/tests/unit/schemas/: test_task_completed_event.py  test_task_created_event.py
todo_app/phase_5/backend/tests/unit/services/: test_kafka_service.py  test_reminder_scheduler.py  test_reminder_service.py
todo_app/phase_5/services/notification-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
todo_app/phase_5/services/notification-service/src/: main.py
todo_app/phase_5/services/notification-service/src/config/: settings.py
todo_app/phase_5/services/notification-service/src/handlers/: __init__.py  email_handler.py  notification_handler.py  push_handler.py
todo_app/phase_5/services/notification-service/src/schemas/: __init__.py
todo_app/phase_5/services/recurring-task-service/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
todo_app/phase_5/services/recurring-task-service/src/: main.py
(+409 files in other folders)
