[project]
name = "todo-app-phase5-backend"
version = "0.5.0"
description = "Event-Driven Todo App Backend - Phase 5"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.27.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.0.0",
    "openai>=1.40.0",
    "openai-chatkit>=1.4.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "alembic>=1.17.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "sqlalchemy",
    "sib-api-v3-sdk>=7.6.0",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.0",
    "mcp>=1.24.0",
    "pyjwt>=2.10.1",
    "dapr>=1.14.0",
    "dapr-ext-fastapi>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "testcontainers[kafka,postgresql]>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
