[project]
name = "notification-service"
version = "1.0.0"
description = "Notification service for sending email and push notifications for task reminders"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "dapr>=1.16.0",
    "dapr-ext-fastapi>=1.16.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.23.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.45",
    "aiosmtplib>=3.0.2",
    "sib-api-v3-sdk>=7.6.0",
    "firebase-admin>=6.6.0",
    "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=5.0.0",
    "testcontainers[kafka,postgresql]>=4.13.3",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.workspace]
members = ["."]
