[project]
name = "recurring-task-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "dapr>=1.16.0",
    "dapr-ext-fastapi>=1.16.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.23.1",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.45",
    "testcontainers[kafka,postgresql]>=4.13.3",
    "uvicorn[standard]>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.workspace]
members = ["."]

